@@ -26,7 +26,6 @@ We require several tools to build the software, including:
 - Valgrind <http://valgrind.org/> (optional)
 - dia <http://live.gnome.org/Dia/> (for images in manual)
 - GnuTLS <http://www.gnu.org/software/gnutls/> (for TLS support)
-- Lasso <http://lasso.entrouvert.org/> (for examples/saml20/)
 
 The required software is typically distributed with your operating
 system, and the instructions for installing them differ.  Here are
@@ -36,7 +35,7 @@ Debian:
 apt-get install git autoconf automake libtool autopoint gettext cvs make
 apt-get install texinfo texlive texlive-plain-generic texlive-extra-utils texlive-font-utils
 apt-get install help2man gtk-doc-tools valgrind
-apt-get install dia libgnutls28-dev gengetopt gperf liblasso3-dev
+apt-get install dia libgnutls28-dev gengetopt gperf
 
 To download the version controlled sources:
 
